descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2011-06-XX  Release 7.20.2                                     ---
----------------------------------------------------------------------

* fixed crash rendering scenes with all invalid lights - Sean Morrison
* improved reliability of ARS tessellation/conversion - Richard Weiss
* improved tessellation performance and reliability - Richard Weiss
* replaced 'erase_all' command with 'erase -r' - Brandon Hinesley
* improved 'ls' command error reporting in archer - Brandon Hinesley
* fixed related object highlighting in archer's tree view - Cliff Yapp
* added closedb command to archer - Brandon Hinesley
* improved behavior of opendb command in archer - Brandon Hinesley
* improved archer/mged manual page browser behavior - Brandon Hinesley
* added man documentation command to archer - Brandon Hinesley
* improved File->New dialog in mged - Brandon Hinesley
* all cmake files now included in dist - Erik Greenwald, Sean Morrison
 

----------------------------------------------------------------------
--- 2011-05-27  Release 7.20.0                                     ---
----------------------------------------------------------------------

This release marks the introduction of a new CMake build system for
BRL-CAD.  CMake is a cross-platform build system infrastructure
capable of generating native build system logic for a wide variety of
operating systems and compilation environments.  Cliff Yapp has been
diligently working on this adaptation for a number of months in order
to simplify the task of maintaining BRL-CAD on multiple platforms.

Previously, there were two build sytems being maintained in BRL-CAD.
One system was based on the GNU Autotools suite for Unix/Linux/BSD
platforms (including Mac OSX); the other was Microsoft Visual Studio